SERVER-57287 Pull the shards' summed 'timeseries' field values to the top-level of the cluster collStats command response

(cherry picked from commit 91ce36557dc90c85544791a47f880509ada6469e)